# deltaether.github.io

./: .gitignore  README.md  flake.nix  index.html  package-lock.json  package.json  tsconfig.json
analyzer/: Cargo.toml
analyzer/src/: lib.rs
css/: style.css
js/: bundle.js  worker.js
pkg/: ai_art_analyzer.d.ts  ai_art_analyzer.js  ai_art_analyzer_bg.wasm  ai_art_analyzer_bg.wasm.d.ts  package.json
src/: colormap.ts  main.ts  types.ts  worker.ts
