[package]
name = "ai-art-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Deltaether"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "ImageData",
]

[profile.release]
opt-level = 3
lto = true
